Fixed styling issues on mobile.

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -4,11 +4,41 @@
 	nav .logo h1 {
 		margin-top: 10px;
 	}
+
+	footer .footer_logo h3 a {
+	    font-size: 26px;
+	}
+
+	.container.body.mobile-container {
+	    width: auto;
+	}
 }
 
 @media only screen and (max-width: 768px) {
 
+	section#projects {
+	    max-width: 92%;
+	}
 
+	.form-row {
+	    margin-left: -15px;
+	}
+
+	.buttons-down {
+		margin-top: 45px;
+	}
+
+	.x_panel {
+	    padding: 15px 5px;
+	}
+
+	div#datatable-posts_length {
+	    width: 165px;
+	}
+
+	div#datatable-posts_filter {
+	    width: 318px;
+	}
 }
 
 @media only screen and (max-width: 992px) {
